autopartkit (1.08) UNRELEASED; urgency=low

  * Matt Kraai
    - Fix the spelling of "occurred".
  * Petter Reinholdtsen
    - Make sure we zero out the LVM header on devices before we try to
      initialize LVM, instead of after we create the device, to make
      sure the device file exist.

 -- Matt Kraai <kraai@debian.org>  Thu,  3 Feb 2005 18:54:55 -0800

autopartkit (1.07) unstable; urgency=low

  * Note that this (or possibly the last upload) contains a variable
    substitution problem in the templates.
  * Updated translations: 
    - Swedish (sv.po) by Per Olofsson

 -- Joey Hess <joeyh@debian.org>  Wed,  2 Feb 2005 17:02:39 -0500

autopartkit (1.06) unstable; urgency=low

  * Colin Watson
    - Build with new libparted ABI (1.6.12).
    - lvm_get_free_space_list() returns int, not void *; fixes compiler
      warning.
  * Updated translations:
    - Bulgarian (bg.po) by Ognyan Kulev
    - Bosnian (bs.po) by Safir Šećerović
    - Catalan (ca.po) by Jordi Mallach
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Finnish (fi.po) by Tapio Lehtonen
    - French (fr.po) by French Team
    - Gallegan (gl.po) by Hctor Fenndez Lpez
    - Hebrew (he.po) by Lior Kaplan
    - Hungarian (hu.po) by VEROK Istvan
    - Italian (it.po) by Filippo Giunchedi
    - Portuguese (pt.po) by Miguel Figueiredo
    - Romanian (ro.po) by Eddy Petrisor
    - Russian (ru.po) by Dmitry Beloglazov
    - Slovenian (sl.po) by Jure Čuhalev

 -- Colin Watson <cjwatson@debian.org>  Sat, 29 Jan 2005 21:12:50 +0000

autopartkit (1.05) unstable; urgency=low

  * Updated translations: 
    - Welsh (cy.po) by Dafydd Harries
    - Hebrew (he.po) by Lior Kaplan
    - Traditional Chinese (zh_TW.po) by Tetralet

 -- Joey Hess <joeyh@debian.org>  Wed,  6 Oct 2004 15:51:59 -0400

autopartkit (1.04) unstable; urgency=low

  * Joey Hess
    - Add an autopartkit/hide, which should hide autopartkit from the main
      menu.
  * Updated translations: 