@@ -6,6 +6,8 @@ autopartkit (1.08) UNRELEASED; urgency=low
     - Make sure we zero out the LVM header on devices before we try to
       initialize LVM, instead of after we create the device, to make
       sure the device file exist.
+    - Correct return type of reduce_disk_usage_size().  There is
+      nothing to return, so replace 'void*' with 'void'.
 
  -- Matt Kraai <kraai@debian.org>  Thu,  3 Feb 2005 18:54:55 -0800
 
